
Changelog Bypass Paywalls Clean - Chrome

Post-release
Add Boersen-zeitung.de
Fix ESPN USA

* v3.2.0.0 (2023-05-29)
Add El Cronista (Argentina)
Add GauchaZH
Add Golem.de (link to archive.is)
Add TechTarget Group
Add VmnMedia.nl Group (opt-in to custom sites)
Remove Mz.de & Volksstimme.de (fix obsolete)
Remove Weltkunst.de (fix obsolete)
Fix Challenges.fr & Sciences et Avenir.fr
Fix Defector (cookie)
Fix Mediahuis Noord (json)
Fix Quora (AI bot crash)
Fix The Athletic (Kiwi)
Fix TheTimes.co.uk (overlay)
Fix TownNews sites (encrypted)
Add PowerShell-script for extension allowlist
Update popup (Google Search Tool)

* v3.1.9.0 (2023-05-21)
Remove (custom) Substack (fix obsolete)
Remove Sueddeutsche Zeitung (fix obsolete)
Fix Citywire
Fix DN.no
Fix Gruppo SAE.it (free articles only)
Fix LePoint.fr
Fix Schwaebische.de
Fix Tagesspiegel.de (not background/checkpoint)
Fix The Globe and Mail (title/comments)
Update custom sites/popup (remove Google Search Tool)

* v3.1.8.0 (2023-05-14)
Add Dagens Nyheter (link to archive.is)
Add Monocle (UK)
Add Stylist.co.uk
Fix Advance Local (no amp)
Fix El Espanol (js)
Fix El Mercurio (Inversiones)

* v3.1.7.3 (2023-05-08)
Remove Medienhaus Aachen (fix obsolete)
Fix BusinessPost.ie (link to archive.is)
Maintenance contentScript (sanitize html-input)

* v3.1.7.0 (2023-05-07)
Add Cairns Post, Geelong Advertiser & Townsville Bulletin (Australia News Corp)
Add Arizent sites (opt-in to custom sites)
Remove Puck.news (fix obsolete)
Fix Adweek (premium)
Fix ilMessaggero.it (+ regional sites)
Fix Mediahuis Noord (json)
Fix Modern Healthcare (sponsored)
Fix Sportico (amp)
Update custom (flex) sites (no fix group)
Update custom sites (load text from json_next)

* v3.1.6.0 (2023-04-30)
Remove Zeit.de (fix obsolete)
Fix Bloomberg (Live TV limit)
Fix Gannett Group (redirect restricted)
Fix La Vanguardia (xhr)
Fix Mediahuis Noord (refresh)
Fix Roularta Media Group (Firefox-sync)

* v3.1.5.0 (2023-04-23)
Add Cox First Media (opt-in to custom sites)