@@ -743,5 +743,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.0.2"
+  "version": "3.2.0.3"
 }
